# CS336

./: .gitignore  README.md
assignment1-basics/cs336_basics/: __init__.py  bpe.py  nn_336.py  pretokenization_example.py  test_bpe.ipynb  train.py  train_tiny_stories.ipynb  train_tiny_stories_128.ipynb  train_tiny_stories_beta2_0_999_2.ipynb  train_tiny_stories_fast.ipynb
assignment1-basics/cs336_basics/merge_vocab/: .clang-format  CMakeLists.txt  CMakeLists_py39.txt
assignment1-basics/cs336_basics/merge_vocab/src/: main.cpp
assignment1-basics/tests/: adapters.py  test_tokenizer.py  test_train_bpe.py
assignment2-systems/: .gitignore  pyproject.toml  run_jit_attn.sh  run_torch_attn.sh
assignment2-systems/cs336-basics/: pyproject.toml
assignment2-systems/cs336-basics/cs336_basics/: model.py
assignment2-systems/cs336_systems/: __init__.py  benchmark.py  benchmark_memory.ipynb  benchmark_time.ipynb  dist_train.ipynb  dist_train.py  flash_attention.py  mixed_precision_accumulation.ipynb
assignment2-systems/tests/: adapters.py  test_attention.py  test_ddp.py  test_ddp_individual_parameters.py
assignment3-scaling/: CHANGELOG.md  README.md  pyproject.toml
assignment3-scaling/cs336_scaling/: __init__.py  chinchilla_isoflops.ipynb  model.py
assignment4-data/: .gitignore  CHANGELOG.md  README.md  get_assets.sh  pyproject.toml  test_and_make_submission.sh
assignment4-data/cs336-basics/: README.md  pyproject.toml
assignment4-data/cs336-basics/configs/: config.yaml
assignment4-data/cs336-basics/configs/experiment/: your_data.yaml
assignment4-data/cs336-basics/cs336_basics/: data.py  ddp_utils.py  model.py  optimizer.py  train_config.py
assignment4-data/cs336-basics/scripts/: generate_with_gpt2_tok.py  train.py
assignment4-data/cs336_data/: __init__.py  process_cc.py  union_find.py
assignment4-data/tests/: adapters.py  test_deduplication.py  test_extract.py  test_langid.py  test_pii.py  test_quality.py  test_toxicity.py
assignment5-alignment/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_and_make_submission.sh
assignment5-alignment/cs336_alignment/: drgrpo_grader.py  record_eval.ipynb  train.ipynb  train_llm.py  validate.ipynb
assignment5-alignment/cs336_alignment/prompts/: alpaca_sft.prompt  r1_zero.prompt
assignment5-alignment/data/MATH/: ei_512_step1.jsonl  ei_512_step2.jsonl  sft.jsonl
assignment5-alignment/scripts/: evaluate_safety.py
assignment5-alignment/scripts/alpaca_eval_vllm_llama3_3_70b_fn/: configs.yaml
assignment5-alignment/tests/: adapters.py  common.py  conftest.py  test_data.py  test_dpo.py  test_grpo.py  test_metrics.py  test_sft.py
assignment5-alignment/tests/_snapshots/: test_compute_entropy.npz  test_compute_group_normalized_rewards_no_normalize_by_std.npz  test_compute_group_normalized_rewards_normalize_by_std.npz  test_compute_grpo_clip_loss_large_cliprange.npz  test_compute_grpo_clip_loss_small_cliprange.npz  test_compute_policy_gradient_loss_grpo_clip.npz  test_get_response_log_probs.npz  (+16 more)
